# libxcb-cursor

./: .gitignore  .gitlab-ci.yml  NEWS  autogen.sh  configure.ac
cursor/: Makefile.am  cursor.c  cursor.h  load_cursor.c  parse_cursor_file.c  shape_to_id.gperf  xcb-cursor.pc.in  xcb_cursor.h
